--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ homepage = "https://github.com/snipsco/rust-threshold-secret-sharing"
 documentation = "https://docs.rs/threshold-secret-sharing"
 license = "MIT/Apache-2.0"
 categories = [ "cryptography" ]
+edition = "2018"
 
 [badges]
 travis-ci = { repository = "snipsco/rust-threshold-secret-sharing" }
