--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,12 @@ edition = "2018"
 travis-ci = { repository = "snipsco/rust-threshold-secret-sharing" }
 
 [features]
+default = []
 paramgen = ["primal"]
+with-testing = ["inventory", "testing"]
 
 [dependencies]
-rand = "0.3.*"
+#rand = "0.3.*"
 primal = { version = "0.2", optional = true }
 
 [dev-dependencies]
@@ -35,3 +37,22 @@ bencher = "0.1"
 [[bench]]
 name = "packed"
 harness = false
+
+[dependencies.inventory]
+optional    = true
+version     = "0.1.6"
+
+[dependencies.rand]
+git         = "https://github.com/apache/teaclave-sgx-sdk"
+package     = "sgx_rand"
+rev         = "v1.1.2"
+
+[dependencies.sgx_tstd]
+features    = ["thread"]
+git         = "https://github.com/apache/teaclave-sgx-sdk"
+rev         = "v1.1.2"
+
+[dependencies.testing]
+branch      = "rsgx1.1.2"
+git         = "https://github.com/usccommunity/teaclave-testing"
+optional    = true
